--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,14 @@ captures/
 .idea/dictionaries
 .idea/libraries
 # Android Studio 3 in .gitignore file.
+.idea
 .idea/caches
 .idea/modules.xml
+.idea/.name
+.idea/codeStyles/Project.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
