--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dti.g25.maitredesbillets">
+    package="dti.g25.maitredesbillets" >
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activité.voirBilletActivity"></activity>
-        <activity android:name=".ui.activité.MainActivity">
+        android:theme="@style/Theme.AppCompat.NoActionBar" >
+        <activity android:name=".ui.activité.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activité.NouveauProjetActivity"
+            android:parentActivityName="ui.activité.MainActivity"
+            />
     </application>
 
 </manifest>
