Ajout de la visualisation des détails d'un billet selon l'architecture épurée

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,10 @@
         <activity android:name=".ui.activité.voirBilletActivity"
             android:parentActivityName="ui.activité.MainActivity"
             />
-        <activity android:name=".ui.activité.créerBilletActivity">
-        </activity>
+        <activity android:name=".ui.activité.créerBilletActivity"
+            android:parentActivityName="ui.activité.voirBilletActivity"/>
 
-
+        <activity android:name=".ui.activité.VoirDescBilletActivity"
+            android:parentActivityName="ui.activité.voirBilletActivity"/>
     </application>
 </manifest>
