Corection d'un bug qui fait crash l'app (oublie de push juste une ligne)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:parentActivityName="ui.activité.voirBilletActivity"/>
 
         <activity android:name=".ui.activité.VoirDescBilletActivity"
-            android:parentActivityName="ui.activité.voirBilletActivity"/>
+            android:parentActivityName="ui.activité.voirBilletActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTask" />/>
     </application>
 </manifest>
